@@ -31,6 +31,8 @@ int np_find_name (struct name_list *list, const char *name);
 int np_seen_name (struct name_list *list, const char *name);
 struct parameter_list *np_add_parameter(struct parameter_list **list, const char *name);
 struct parameter_list *np_find_parameter(struct parameter_list *list, const char *name);
+struct parameter_list *np_del_parameter(struct parameter_list *item, struct parameter_list *prev);
+  
 int search_parameter_list (struct parameter_list *list, const char *name);
 void np_set_best_match(struct parameter_list *desired, struct mount_entry *mount_list, int exact);
 int np_regex_match_mount_entry (struct mount_entry* me, regex_t* re);
